--- a/styles.css
+++ b/styles.css
@@ -5,40 +5,51 @@ body {
 .intro-lexi {
     display: flex;
     justify-content: center;
+    justify-content: space-evenly;
     font-size: 40px;
     padding-top: 50px;
     height: 140px;
     width: 915px;
     color: purple;
-    border: 4px dotted greenyellow;
+    border: none;
+    margin-left: 140px;
 } 
+.booboo-bear {
+    margin-top: -45px;
+    text-align: center;
+    font-size: 35px;
+    color: purple;
+}
 /*MAIN*/
-main{
-    border: 4px dotted greenyellow;
-}
+
 /*STATS*/
-.no-hitters {
-    height: 350px;
-    width: 300px;
-    transition: transform .2s;
-    
-}
-.no-hitters:hover {
-  transform: scale(1.3);
-}
+
 .future-img {
     height: 35px;
     margin-top: 80px;
     background-color: #E61F1F;
     font-size: 30px;
 }
-
+.pitcher-img {
+    height: 130px;
+    width: 130px;
+    border-radius: 50%;
+    filter: grayscale(100%);
+    }
+    
+    .pitcher-img:hover{
+    filter: grayscale(0%);
+    filter: gray;
+    filter: grayscale(0%);
+    filter: none;
+    transition: 1s ease-in-out;
+    transform: scale(2.2)
+    }
 /*SOCIALS*/
 .socials {
-    font-size: 100px;
+    font-size: 30px;
     text-align: center;
 }
-
 /*FOOTER*/
 footer {
     /*border: 2px dotted black;*/
@@ -50,20 +61,16 @@ footer {
     display: flex;
     justify-content: space-evenly;
 }
-.border {
-    /*border: 4px dotted blue;*/
-}
-
 .images {
     justify-content: space-evenly;
-    /*border: 4px dotted black;*/
+    border: solid 5px #FC5185;
     height: 350px;
     width: 300px;
     transition: transform .2s;
     
 }
 .images:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
 .links {
@@ -72,9 +79,16 @@ footer {
     margin-right: auto;
     color: #E61F1F;
     text-align: center;
-    text-shadow: 1px 1px black;
-    background-color: pink;
-    width: 300px;
+    text-shadow: 1px 1px hotpink;
+    border:6px solid black ;
+    border-radius: 50%;
+    width: 130px;
+    height: 130px;
     cursor: crosshair;
+
 }
+.links:hover {  
+    border-color: purple;
+}
+
 
