--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,15 @@ body {
     color: purple;
     border: none;
 } 
+.lexi {
+    text-shadow: 1px 2px yellow;
+}
 .booboo-bear {
     margin-top: -40px;
     text-align: center;
     font-size: 35px;
     color: purple;
+    text-shadow: 1px -2px yellow;
 }
 /*MAIN*/
 
@@ -87,5 +91,6 @@ footer {
 .links:hover {  
     border-color: purple;
 }
+ 
 
 
